--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test"
+    "test": "ng test",
+    "mock:server": "json-server --watch mocks/db.json --port 3000",
+    "dev": "concurrently — kill-others \"npm run mock:server\" \"npm run start\""
   },
   "private": true,
   "dependencies": {
@@ -19,9 +21,12 @@
     "@angular/router": "~11.0.1",
     "angular-froala-wysiwyg": "^3.2.3",
     "bootstrap": "^4.5.3",
+    "concurrently": "^5.3.0",
     "jquery": "^3.5.1",
+    "json-server": "^0.16.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -30,6 +35,7 @@
     "@angular/compiler-cli": "~11.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
